--- a/WebAccessible/WebContent/Bouton HTML standard.html
+++ b/WebAccessible/WebContent/Bouton HTML standard.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Simple button</title>
+<title>Bouton standard</title>
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body role="document">
 	<main role="main">
-<h1>Simple HTML button</h1>
+<h1>Bouton HTML standard</h1>
 <h2>Description</h2>
-	<p>This kind of buttons don(t need any adaptation . They are naturaly reconzided by screen reader. You should prefer this solution, if it is possible</p>
+Les bouton HTML standardssont reconnus naturelement par les lecteurs d'écrans.
+Ils ne demandent aucunes adaptation.
+Si leur apparence est modifiée leur sémantique CSS restera.
+Cette solution doit être priviligiée.
 	<h2>Example</h2>
-<input type="button" value="Simple button" onClick="alert('clicked')" />
+<input type="button" value="Simple button" onClick="alert('Validé !')" />
 <h2>Code</h2>
 &lt;	input type="button" value="Simple button" onClick="alert('clicked')" /&gt;
 	 </main>
