--- a/WebAccessible/WebContent/Bouton switch.html
+++ b/WebAccessible/WebContent/Bouton switch.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Switch button</title>
+<title>Bouton Switch>
 <link href="css/style.css" rel="stylesheet" type="text/css">
 <script src="JavaScript/accessibilityFacilities.js" type="text/javascript"></script>
 </head>
 <body role="document">
 
 	<main role="main">
-	<h1>Switch buttons</h1>
+	<h1>Bouton switch</h1>
 	<h2>Description</h2>
-	If you create a mutiple state button, you should :
+	Si vous créer un bouton à plusieur états à lj'aide du CSS.
+	Vous devez :
 	<ul>
-	<li>Add aria property : role="button""".</li> 
-	<li>Add "" tabIndexproperty to set focus enabled
-with tab key.</li>
-	<li>add aria property"aria-pressed" with values "true", "false", or "mixed"</li>
-	<li>manage the change ofaria property "aria-pressed" in JavaScript code</li>   
+	<li>l'attribut aria : ""role='button'"</li> 
+	<li>La propriété "tabIndex='0'" pour rendre l'élement focussable</li>
+	<li>la propriété aria "aria-pressed='pressed'" rue", "ou 'fals' ou 'mixed'</li>
+	<li>gérer la mise à jour de l'état du bouton au clavier et à la sourie avec les touches entré et espace avec JavaScript </li>   
 	</ul>
-	<h2>Example</h2>
+	
+	<h2>Exaemple</h2>
 	<span class="button1" role="button" tabIndex="0" aria-pressed="true" onClick="switchButton(this)" onKeyUp="if(isValidated(event)) {switchButton(this)}">
 		Switch
 	</span>
