Correction d'une erreur de balise

--- a/WebAccessible/WebContent/Bouton Div Span.html
+++ b/WebAccessible/WebContent/Bouton Div Span.html
@@ -15,7 +15,7 @@ L'apparence de l'élément sera modifié, mais  pas sa sémantique.
 Il faut :
 <ul>
 <li>ajouter l'attribut role='button'", pour sgnaler la fonction réelle de l'élément"</li>
-<li>ajouter la  propriété "tabIndexproperty" pour rendre l'élement foccussable</ul>
+<li>ajouter la  propriété "tabIndexproperty" pour rendre l'élement foccussable</li>
 <li>Gérer le focus au clavier touche espace et entré, et à la sourie.</li>
 	</ul>
 	
