Corrections et ajouts

--- a/WebAccessible/WebContent/2.1 La langue.html
+++ b/WebAccessible/WebContent/2.1 La langue.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en-en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Hidden text</title>
+<title>La langue</title>
 <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body role="document">
-<header role="banner">
-Header informations
-</header>
-
-<div class="blindZone">
-If you can read this text without a screen reader in your web browser, you are an Alien !
-In this DIV, you can put informations to screen reader user.
-Like a Lin to mute music, or disturbing options to screen reader user. 
-</div></div>
-There is a secret message to scrren reader users only.
-
 	<main role="main">
-	Main content of the ppage.
+				
+Si vou lancez la lecture avec un lecteur d'écran, vous constaterez la situation incofortable que cela gènère.
+
+	Dans cette page l'attribut "lang" de la vbalise "html" à volontairement été mis à "en-en", pour montrerce qui arrive lorsque la  langue n'a pas été initialiser, ce qui se traduit par un comportement aléatoire du lecteur d'écran,  ou si elle a mal été initialisé, en général c'est la langue anglaise qui est choisi par défaut, si le lecteur d'écran ne détecte pas la langue.
+   
+Vous pouvez tenter de lancer la lecture avec les flèches ou "Cctrl + flèche du bas".
+	
 	 </main>
 	 
-	 <footer role="contentinfo">
-	 Footer informations
-	 </footer>
-
 </body>
 </html>
