--- a/WebAccessible/WebContent/3 Texte cachée.html
+++ b/WebAccessible/WebContent/3 Texte cachée.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Simple page</title>
+<title>Zone cachée pour lecteur d'écrans</title>
 <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body role="document">
@@ -10,22 +10,28 @@
 Header informations
 </header>
 
-<nav role="navigation">
-	<ul role="menu">
-		<li role="menuitem"><a href="">Main page</a></li>
-		<li role="menuitem"><a href=""></a>Today tips</li>
-		<li role="menuitem"><a href="">About us</a></li>
-		<li role="menuitem"><a href="AfficherArticles?choix=divers">Nos
-				articles divers</a></li>
-	</ul>
-</nav>
+<div class="blindZone">
+Zone réservée aux utilisateur de lecteur d'écran
+<ul>
+<li>Aller directement au contenu</li>
+<li>politique d'accessibilité</li>
+<li>...</li>
+</ul>>
+</div>
 
 	<main role="main">
-	Main content of the ppage.
+	
 	 </main>
 	 
+	 zone de navigation
+	 
+	 
+	 <h1>Titre de la page</h1>
+	 
+	 Contenu principal de la page, article par exemple
+	 
 	 <footer role="contentinfo">
-	 Footer informations
+	 Pied de page
 	 </footer>
 
 </body>
