--- a/WebAccessible/WebContent/5.4 Bouton switch.html
+++ b/WebAccessible/WebContent/5.4 Bouton switch.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Bouton Switch>
+<title>Bouton Switch</title>
 <link href="css/style.css" rel="stylesheet" type="text/css">
 <script src="JavaScript/accessibilityFacilities.js" type="text/javascript"></script>
 </head>
